fix : make website invisible in window size

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,7 +37,7 @@
 
 body,
 html {
-  @apply min-h-screen text-white bg-black overflow-x-hidden;
+  @apply min-h-screen text-white bg-black overflow-x-hidden md:hidden md:bg-white;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 body::-webkit-scrollbar,
